// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import ConnectScreenConnected component renders ConnectScreenConnected 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
              "borderBottomColor": "rgb(216, 216, 216)",
              "flex": 1,
              "shadowColor": "rgb(216, 216, 216)",
              "shadowOffset": Object {
                "height": 0.5,
                "width": 0,
              },
              "shadowOpacity": 0.85,
              "shadowRadius": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "maxHeight": undefined,
            "minHeight": undefined,
            "opacity": undefined,
            "transform": undefined,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "marginHorizontal": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityRole="header"
              aria-level="1"
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 17,
                  "fontWeight": "600",
                }
              }
            >
              Home
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransition={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "overflow": undefined,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          needsOffscreenAlphaCompositing={false}
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "rgb(249, 249, 251)",
                          "flex": 1,
                          "height": "100%",
                        }
                      }
                    >
                      <View
                        edges={
                          Array [
                            "left",
                            "right",
                          ]
                        }
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <RCTScrollView
                          refreshControl={
                            <RefreshControlMock
                              onRefresh={[Function]}
                              refreshing={false}
                            />
                          }
                        >
                          <RCTRefreshControl />
                          <View>
                            <View
                              style={
                                Object {
                                  "paddingHorizontal": 16,
                                  "paddingVertical": 16,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "marginBottom": 16,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "flexShrink": 1,
                                    }
                                  }
                                >
                                  <Text
                                    secondary={true}
                                    style={
                                      Object {
                                        "color": "rgba(39, 39, 46, 0.6)",
                                        "fontFamily": "InterUI-Bold",
                                        "fontSize": 16,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    People to Follow
                                  </Text>
                                </View>
                              </View>
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "opacity": 1,
                                  }
                                }
                              >
                                <View
                                  bordered={true}
                                  disabled={false}
                                  pill={false}
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "transparent",
                                      "borderColor": "#17B582",
                                      "borderRadius": 16,
                                      "borderWidth": 0.5,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "justifyContent": "center",
                                      "marginTop": 8,
                                      "opacity": 1,
                                      "overflow": "hidden",
                                      "paddingHorizontal": 16,
                                      "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
                                      "shadowOffset": Object {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 1,
                                      "shadowRadius": 8,
                                      "width": "100%",
                                    }
                                  }
                                >
                                  <Text
                                    style={
                                      Object {
                                        "color": "#17B582",
                                        "fontFamily": "InterUI-Bold",
                                        "fontSize": 16,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Find People to Follow
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                    <Modal
                      animationType="slide"
                      hardwareAccelerated={false}
                      onRequestClose={[Function]}
                      visible={false}
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "rgb(249, 249, 251)",
                            "flex": 1,
                            "height": "100%",
                          }
                        }
                      >
                        <RCTSafeAreaView
                          emulateUnlessSupported={true}
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#FFFFFF",
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "height": 64,
                                  "justifyContent": "space-between",
                                  "padding": 16,
                                  "width": "100%",
                                }
                              }
                            >
                              <View
                                accessible={true}
                                focusable={false}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "minWidth": 48,
                                    "opacity": 1,
                                  }
                                }
                              >
                                <Text
                                  numberOfLines={1}
                                  style={
                                    Object {
                                      "color": "#17B582",
                                      "fontSize": 16,
                                      "fontWeight": undefined,
                                      "lineHeight": 24,
                                      "textAlign": "right",
                                    }
                                  }
                                />
                              </View>
                              <Text
                                style={
                                  Object {
                                    "color": "#27272E",
                                    "fontFamily": "InterUI-Bold",
                                    "fontSize": 16,
                                    "lineHeight": 24,
                                  }
                                }
                              >
                                Find People to Follow
                              </Text>
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "minWidth": 48,
                                    "opacity": 1,
                                  }
                                }
                              >
                                <Text
                                  numberOfLines={1}
                                  strong={true}
                                  style={
                                    Object {
                                      "color": "#17B582",
                                      "fontSize": 16,
                                      "fontWeight": "bold",
                                      "lineHeight": 24,
                                      "textAlign": "right",
                                    }
                                  }
                                >
                                  Done
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "marginBottom": 16,
                                  "marginHorizontal": 16,
                                }
                              }
                            >
                              <View
                                disabled={false}
                                style={
                                  Object {
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "rgb(249, 249, 251)",
                                      "borderRadius": 16,
                                      "flexDirection": "row",
                                      "flexGrow": 1,
                                      "overflow": "hidden",
                                    }
                                  }
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={16}
                                    bbWidth={16}
                                    color="rgba(39, 39, 46, 0.3)"
                                    height={16}
                                    id="Raw"
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    size={16}
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        Object {},
                                        null,
                                        Object {
                                          "flex": 0,
                                          "height": 16,
                                          "width": 16,
                                        },
                                      ]
                                    }
                                    tintColor="rgba(39, 39, 46, 0.3)"
                                    vbHeight={256.00098}
                                    vbWidth={256.00098}
                                    width={16}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        Array [
                                          0,
                                          4278190080,
                                        ]
                                      }
                                      fillOpacity={1}
                                      fillRule={1}
                                      font={Object {}}
                                      matrix={
                                        Array [
                                          1,
                                          0,
                                          0,
                                          1,
                                          0,
                                          0,
                                        ]
                                      }
                                      opacity={1}
                                      originX={0}
                                      originY={0}
                                      propList={Array []}
                                      rotation={0}
                                      scaleX={1}
                                      scaleY={1}
                                      skewX={0}
                                      skewY={0}
                                      stroke={null}
                                      strokeDasharray={null}
                                      strokeDashoffset={null}
                                      strokeLinecap={0}
                                      strokeLinejoin={0}
                                      strokeMiterlimit={4}
                                      strokeOpacity={1}
                                      strokeWidth={1}
                                      vectorEffect={0}
                                      x={0}
                                      y={0}
                                    >
                                      <RNSVGRect
                                        fill={null}
                                        fillOpacity={1}
                                        fillRule={1}
                                        height={256}
                                        matrix={
                                          Array [
                                            1,
                                            0,
                                            0,
                                            1,
                                            0,
                                            0,
                                          ]
                                        }
                                        opacity={1}
                                        originX={0}
                                        originY={0}
                                        propList={
                                          Array [
                                            "fill",
                                          ]
                                        }
                                        rotation={0}
                                        rx={0}
                                        ry={0}
                                        scaleX={1}
                                        scaleY={1}
                                        skewX={0}
                                        skewY={0}
                                        stroke={null}
                                        strokeDasharray={null}
                                        strokeDashoffset={null}
                                        strokeLinecap={0}
                                        strokeLinejoin={0}
                                        strokeMiterlimit={4}
                                        strokeOpacity={1}
                                        strokeWidth={1}
                                        vectorEffect={0}
                                        width={256}
                                        x={0}
                                        y={0}
                                      />
                                      <RNSVGCircle
                                        cx={116}
                                        cy={116}
                                        fill={null}
                                        fillOpacity={1}
                                        fillRule={1}
                                        matrix={
                                          Array [
                                            1,
                                            0,
                                            0,
                                            1,
                                            0,
                                            0,
                                          ]
                                        }
                                        opacity={1}
                                        originX={0}
                                        originY={0}
                                        propList={
                                          Array [
                                            "fill",
                                            "stroke",
                                            "strokeWidth",
                                            "strokeLinecap",
                                            "strokeLinejoin",
                                          ]
                                        }
                                        r={84}
                                        rotation={0}
                                        scaleX={1}
                                        scaleY={1}
                                        skewX={0}
                                        skewY={0}
                                        stroke={
                                          Array [
                                            0,
                                            1294411566,
                                          ]
                                        }
                                        strokeDasharray={null}
                                        strokeDashoffset={null}
                                        strokeLinecap={1}
                                        strokeLinejoin={1}
                                        strokeMiterlimit={4}
                                        strokeOpacity={1}
                                        strokeWidth={16}
                                        vectorEffect={0}
                                        x={0}
                                        y={0}
                                      />
                                      <RNSVGLine
                                        fill={null}
                                        fillOpacity={1}
                                        fillRule={1}
                                        matrix={
                                          Array [
                                            1,
                                            0,
                                            0,
                                            1,
                                            0,
                                            0,
                                          ]
                                        }
                                        opacity={1}
                                        originX={0}
                                        originY={0}
                                        propList={
                                          Array [
                                            "fill",
                                            "stroke",
                                            "strokeWidth",
                                            "strokeLinecap",
                                            "strokeLinejoin",
                                          ]
                                        }
                                        rotation={0}
                                        scaleX={1}
                                        scaleY={1}
                                        skewX={0}
                                        skewY={0}
                                        stroke={
                                          Array [
                                            0,
                                            1294411566,
                                          ]
                                        }
                                        strokeDasharray={null}
                                        strokeDashoffset={null}
                                        strokeLinecap={1}
                                        strokeLinejoin={1}
                                        strokeMiterlimit={4}
                                        strokeOpacity={1}
                                        strokeWidth={16}
                                        vectorEffect={0}
                                        x={0}
                                        x1={175.39356}
                                        x2={223.99414}
                                        y={0}
                                        y1={175.40039}
                                        y2={224.00098}
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                  <TextInput
                                    allowFontScaling={true}
                                    cancelButtonOffset={0}
                                    editable={true}
                                    isFocused={false}
                                    onChangeText={[Function]}
                                    onFocus={[Function]}
                                    placeholder="Search"
                                    placeholderTextColor="rgba(39, 39, 46, 0.3)"
                                    rejectResponderTermination={true}
                                    returnKeyType="search"
                                    selectionColor="#17B582"
                                    style={
                                      Object {
                                        "color": "#27272E",
                                        "flexGrow": 1,
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "height": 40,
                                        "paddingLeft": 8,
                                        "paddingRight": 0,
                                        "paddingTop": 1,
                                        "paddingVertical": 0,
                                      }
                                    }
                                    underlineColorAndroid="transparent"
                                    value=""
                                  />
                                </View>
                                <View
                                  style={
                                    Object {
                                      "height": "100%",
                                      "position": "absolute",
                                      "right": 0,
                                      "transform": Array [
                                        Object {
                                          "translateX": 1000,
                                        },
                                      ],
                                    }
                                  }
                                >
                                  <View
                                    screenBackgroundColor="#FFFFFF"
                                    style={
                                      Object {
                                        "alignItems": "center",
                                        "backgroundColor": "#FFFFFF",
                                        "flexDirection": "row",
                                      }
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "backgroundColor": "rgb(249, 249, 251)",
                                          "borderBottomRightRadius": 16,
                                          "borderColor": "rgb(249, 249, 251)",
                                          "borderRightWidth": 1,
                                          "borderTopRightRadius": 16,
                                          "overflow": "hidden",
                                        }
                                      }
                                    >
                                      <View
                                        accessible={true}
                                        focusable={true}
                                        onClick={[Function]}
                                        onResponderGrant={[Function]}
                                        onResponderMove={[Function]}
                                        onResponderRelease={[Function]}
                                        onResponderTerminate={[Function]}
                                        onResponderTerminationRequest={[Function]}
                                        onStartShouldSetResponder={[Function]}
                                        style={
                                          Object {
                                            "opacity": 1,
                                          }
                                        }
                                      >
                                        <View
                                          borderRadius={28}
                                          iconPadding={12}
                                          style={
                                            Object {
                                              "opacity": 0,
                                              "padding": 12,
                                            }
                                          }
                                        >
                                          <RNSVGSvgView
                                            align="xMidYMid"
                                            bbHeight={16}
                                            bbWidth={16}
                                            color="rgba(39, 39, 46, 0.3)"
                                            fill="rgba(39, 39, 46, 0.3)"
                                            height={16}
                                            id="Raw"
                                            meetOrSlice={0}
                                            minX={0}
                                            minY={0}
                                            size={16}
                                            style={
                                              Array [
                                                Object {
                                                  "backgroundColor": "transparent",
                                                  "borderWidth": 0,
                                                },
                                                Object {},
                                                null,
                                                Object {
                                                  "flex": 0,
                                                  "height": 16,
                                                  "width": 16,
                                                },
                                              ]
                                            }
                                            tintColor="rgba(39, 39, 46, 0.3)"
                                            vbHeight={256}
                                            vbWidth={256}
                                            width={16}
                                          >
                                            <RNSVGGroup
                                              fill={
                                                Array [
                                                  0,
                                                  1294411566,
                                                ]
                                              }
                                              fillOpacity={1}
                                              fillRule={1}
                                              font={Object {}}
                                              matrix={
                                                Array [
                                                  1,
                                                  0,
                                                  0,
                                                  1,
                                                  0,
                                                  0,
                                                ]
                                              }
                                              opacity={1}
                                              originX={0}
                                              originY={0}
                                              propList={
                                                Array [
                                                  "fill",
                                                ]
                                              }
                                              rotation={0}
                                              scaleX={1}
                                              scaleY={1}
                                              skewX={0}
                                              skewY={0}
                                              stroke={null}
                                              strokeDasharray={null}
                                              strokeDashoffset={null}
                                              strokeLinecap={0}
                                              strokeLinejoin={0}
                                              strokeMiterlimit={4}
                                              strokeOpacity={1}
                                              strokeWidth={1}
                                              vectorEffect={0}
                                              x={0}
                                              y={0}
                                            >
                                              <RNSVGRect
                                                fill={null}
                                                fillOpacity={1}
                                                fillRule={1}
                                                height={256}
                                                matrix={
                                                  Array [
                                                    1,
                                                    0,
                                                    0,
                                                    1,
                                                    0,
                                                    0,
                                                  ]
                                                }
                                                opacity={1}
                                                originX={0}
                                                originY={0}
                                                propList={
                                                  Array [
                                                    "fill",
                                                  ]
                                                }
                                                rotation={0}
                                                rx={0}
                                                ry={0}
                                                scaleX={1}
                                                scaleY={1}
                                                skewX={0}
                                                skewY={0}
                                                stroke={null}
                                                strokeDasharray={null}
                                                strokeDashoffset={null}
                                                strokeLinecap={0}
                                                strokeLinejoin={0}
                                                strokeMiterlimit={4}
                                                strokeOpacity={1}
                                                strokeWidth={1}
                                                vectorEffect={0}
                                                width={256}
                                                x={0}
                                                y={0}
                                              />
                                              <RNSVGPath
                                                d="M128,24A104,104,0,1,0,232,128,104.12041,104.12041,0,0,0,128,24Zm37.65625,130.34375a7.99915,7.99915,0,1,1-11.3125,11.3125L128,139.3125l-26.34375,26.34375a7.99915,7.99915,0,0,1-11.3125-11.3125L116.6875,128,90.34375,101.65625a7.99915,7.99915,0,0,1,11.3125-11.3125L128,116.6875l26.34375-26.34375a7.99915,7.99915,0,0,1,11.3125,11.3125L139.3125,128Z"
                                                fill={
                                                  Array [
                                                    0,
                                                    4278190080,
                                                  ]
                                                }
                                                fillOpacity={1}
                                                fillRule={1}
                                                matrix={
                                                  Array [
                                                    1,
                                                    0,
                                                    0,
                                                    1,
                                                    0,
                                                    0,
                                                  ]
                                                }
                                                opacity={1}
                                                originX={0}
                                                originY={0}
                                                propList={Array []}
                                                rotation={0}
                                                scaleX={1}
                                                scaleY={1}
                                                skewX={0}
                                                skewY={0}
                                                stroke={null}
                                                strokeDasharray={null}
                                                strokeDashoffset={null}
                                                strokeLinecap={0}
                                                strokeLinejoin={0}
                                                strokeMiterlimit={4}
                                                strokeOpacity={1}
                                                strokeWidth={1}
                                                vectorEffect={0}
                                                x={0}
                                                y={0}
                                              />
                                            </RNSVGGroup>
                                          </RNSVGSvgView>
                                        </View>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                            <RCTScrollView
                              style={
                                Object {
                                  "height": "90%",
                                }
                              }
                            >
                              <View>
                                <View
                                  style={
                                    Object {
                                      "paddingVertical": 64,
                                    }
                                  }
                                />
                              </View>
                            </RCTScrollView>
                          </View>
                        </RCTSafeAreaView>
                      </View>
                    </Modal>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`import ConnectScreenConnected component renders ConnectScreenConnected with ActionBar and ActionTable 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
              "borderBottomColor": "rgb(216, 216, 216)",
              "flex": 1,
              "shadowColor": "rgb(216, 216, 216)",
              "shadowOffset": Object {
                "height": 0.5,
                "width": 0,
              },
              "shadowOpacity": 0.85,
              "shadowRadius": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "maxHeight": undefined,
            "minHeight": undefined,
            "opacity": undefined,
            "transform": undefined,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "marginHorizontal": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityRole="header"
              aria-level="1"
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 17,
                  "fontWeight": "600",
                }
              }
            >
              Home
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransition={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "overflow": undefined,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          needsOffscreenAlphaCompositing={false}
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "rgb(249, 249, 251)",
                          "flex": 1,
                          "height": "100%",
                        }
                      }
                    >
                      <View
                        edges={
                          Array [
                            "left",
                            "right",
                          ]
                        }
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <RCTScrollView
                          refreshControl={
                            <RefreshControlMock
                              onRefresh={[Function]}
                              refreshing={false}
                            />
                          }
                        >
                          <RCTRefreshControl />
                          <View>
                            <Text>
                              Action Bar
                            </Text>
                            <View
                              style={
                                Object {
                                  "paddingHorizontal": 16,
                                  "paddingVertical": 16,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "marginBottom": 16,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "flexShrink": 1,
                                    }
                                  }
                                >
                                  <Text
                                    secondary={true}
                                    style={
                                      Object {
                                        "color": "rgba(39, 39, 46, 0.6)",
                                        "fontFamily": "InterUI-Bold",
                                        "fontSize": 16,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    People to Follow
                                  </Text>
                                </View>
                              </View>
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "opacity": 1,
                                  }
                                }
                              >
                                <View
                                  bordered={true}
                                  disabled={false}
                                  pill={false}
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "transparent",
                                      "borderColor": "#17B582",
                                      "borderRadius": 16,
                                      "borderWidth": 0.5,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "justifyContent": "center",
                                      "marginTop": 8,
                                      "opacity": 1,
                                      "overflow": "hidden",
                                      "paddingHorizontal": 16,
                                      "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
                                      "shadowOffset": Object {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 1,
                                      "shadowRadius": 8,
                                      "width": "100%",
                                    }
                                  }
                                >
                                  <Text
                                    style={
                                      Object {
                                        "color": "#17B582",
                                        "fontFamily": "InterUI-Bold",
                                        "fontSize": 16,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Find People to Follow
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <Text>
                              Action Table
                            </Text>
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                    <Modal
                      animationType="slide"
                      hardwareAccelerated={false}
                      onRequestClose={[Function]}
                      visible={false}
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "rgb(249, 249, 251)",
                            "flex": 1,
                            "height": "100%",
                          }
                        }
                      >
                        <RCTSafeAreaView
                          emulateUnlessSupported={true}
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#FFFFFF",
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "height": 64,
                                  "justifyContent": "space-between",
                                  "padding": 16,
                                  "width": "100%",
                                }
                              }
                            >
                              <View
                                accessible={true}
                                focusable={false}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "minWidth": 48,
                                    "opacity": 1,
                                  }
                                }
                              >
                                <Text
                                  numberOfLines={1}
                                  style={
                                    Object {
                                      "color": "#17B582",
                                      "fontSize": 16,
                                      "fontWeight": undefined,
                                      "lineHeight": 24,
                                      "textAlign": "right",
                                    }
                                  }
                                />
                              </View>
                              <Text
                                style={
                                  Object {
                                    "color": "#27272E",
                                    "fontFamily": "InterUI-Bold",
                                    "fontSize": 16,
                                    "lineHeight": 24,
                                  }
                                }
                              >
                                Find People to Follow
                              </Text>
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "minWidth": 48,
                                    "opacity": 1,
                                  }
                                }
                              >
                                <Text
                                  numberOfLines={1}
                                  strong={true}
                                  style={
                                    Object {
                                      "color": "#17B582",
                                      "fontSize": 16,
                                      "fontWeight": "bold",
                                      "lineHeight": 24,
                                      "textAlign": "right",
                                    }
                                  }
                                >
                                  Done
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "marginBottom": 16,
                                  "marginHorizontal": 16,
                                }
                              }
                            >
                              <View
                                disabled={false}
                                style={
                                  Object {
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "rgb(249, 249, 251)",
                                      "borderRadius": 16,
                                      "flexDirection": "row",
                                      "flexGrow": 1,
                                      "overflow": "hidden",
                                    }
                                  }
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={16}
                                    bbWidth={16}
                                    color="rgba(39, 39, 46, 0.3)"
                                    height={16}
                                    id="Raw"
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    size={16}
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        Object {},
                                        null,
                                        Object {
                                          "flex": 0,
                                          "height": 16,
                                          "width": 16,
                                        },
                                      ]
                                    }
                                    tintColor="rgba(39, 39, 46, 0.3)"
                                    vbHeight={256.00098}
                                    vbWidth={256.00098}
                                    width={16}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        Array [
                                          0,
                                          4278190080,
                                        ]
                                      }
                                      fillOpacity={1}
                                      fillRule={1}
                                      font={Object {}}
                                      matrix={
                                        Array [
                                          1,
                                          0,
                                          0,
                                          1,
                                          0,
                                          0,
                                        ]
                                      }
                                      opacity={1}
                                      originX={0}
                                      originY={0}
                                      propList={Array []}
                                      rotation={0}
                                      scaleX={1}
                                      scaleY={1}
                                      skewX={0}
                                      skewY={0}
                                      stroke={null}
                                      strokeDasharray={null}
                                      strokeDashoffset={null}
                                      strokeLinecap={0}
                                      strokeLinejoin={0}
                                      strokeMiterlimit={4}
                                      strokeOpacity={1}
                                      strokeWidth={1}
                                      vectorEffect={0}
                                      x={0}
                                      y={0}
                                    >
                                      <RNSVGRect
                                        fill={null}
                                        fillOpacity={1}
                                        fillRule={1}
                                        height={256}
                                        matrix={
                                          Array [
                                            1,
                                            0,
                                            0,
                                            1,
                                            0,
                                            0,
                                          ]
                                        }
                                        opacity={1}
                                        originX={0}
                                        originY={0}
                                        propList={
                                          Array [
                                            "fill",
                                          ]
                                        }
                                        rotation={0}
                                        rx={0}
                                        ry={0}
                                        scaleX={1}
                                        scaleY={1}
                                        skewX={0}
                                        skewY={0}
                                        stroke={null}
                                        strokeDasharray={null}
                                        strokeDashoffset={null}
                                        strokeLinecap={0}
                                        strokeLinejoin={0}
                                        strokeMiterlimit={4}
                                        strokeOpacity={1}
                                        strokeWidth={1}
                                        vectorEffect={0}
                                        width={256}
                                        x={0}
                                        y={0}
                                      />
                                      <RNSVGCircle
                                        cx={116}
                                        cy={116}
                                        fill={null}
                                        fillOpacity={1}
                                        fillRule={1}
                                        matrix={
                                          Array [
                                            1,
                                            0,
                                            0,
                                            1,
                                            0,
                                            0,
                                          ]
                                        }
                                        opacity={1}
                                        originX={0}
                                        originY={0}
                                        propList={
                                          Array [
                                            "fill",
                                            "stroke",
                                            "strokeWidth",
                                            "strokeLinecap",
                                            "strokeLinejoin",
                                          ]
                                        }
                                        r={84}
                                        rotation={0}
                                        scaleX={1}
                                        scaleY={1}
                                        skewX={0}
                                        skewY={0}
                                        stroke={
                                          Array [
                                            0,
                                            1294411566,
                                          ]
                                        }
                                        strokeDasharray={null}
                                        strokeDashoffset={null}
                                        strokeLinecap={1}
                                        strokeLinejoin={1}
                                        strokeMiterlimit={4}
                                        strokeOpacity={1}
                                        strokeWidth={16}
                                        vectorEffect={0}
                                        x={0}
                                        y={0}
                                      />
                                      <RNSVGLine
                                        fill={null}
                                        fillOpacity={1}
                                        fillRule={1}
                                        matrix={
                                          Array [
                                            1,
                                            0,
                                            0,
                                            1,
                                            0,
                                            0,
                                          ]
                                        }
                                        opacity={1}
                                        originX={0}
                                        originY={0}
                                        propList={
                                          Array [
                                            "fill",
                                            "stroke",
                                            "strokeWidth",
                                            "strokeLinecap",
                                            "strokeLinejoin",
                                          ]
                                        }
                                        rotation={0}
                                        scaleX={1}
                                        scaleY={1}
                                        skewX={0}
                                        skewY={0}
                                        stroke={
                                          Array [
                                            0,
                                            1294411566,
                                          ]
                                        }
                                        strokeDasharray={null}
                                        strokeDashoffset={null}
                                        strokeLinecap={1}
                                        strokeLinejoin={1}
                                        strokeMiterlimit={4}
                                        strokeOpacity={1}
                                        strokeWidth={16}
                                        vectorEffect={0}
                                        x={0}
                                        x1={175.39356}
                                        x2={223.99414}
                                        y={0}
                                        y1={175.40039}
                                        y2={224.00098}
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                  <TextInput
                                    allowFontScaling={true}
                                    cancelButtonOffset={0}
                                    editable={true}
                                    isFocused={false}
                                    onChangeText={[Function]}
                                    onFocus={[Function]}
                                    placeholder="Search"
                                    placeholderTextColor="rgba(39, 39, 46, 0.3)"
                                    rejectResponderTermination={true}
                                    returnKeyType="search"
                                    selectionColor="#17B582"
                                    style={
                                      Object {
                                        "color": "#27272E",
                                        "flexGrow": 1,
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "height": 40,
                                        "paddingLeft": 8,
                                        "paddingRight": 0,
                                        "paddingTop": 1,
                                        "paddingVertical": 0,
                                      }
                                    }
                                    underlineColorAndroid="transparent"
                                    value=""
                                  />
                                </View>
                                <View
                                  style={
                                    Object {
                                      "height": "100%",
                                      "position": "absolute",
                                      "right": 0,
                                      "transform": Array [
                                        Object {
                                          "translateX": 1000,
                                        },
                                      ],
                                    }
                                  }
                                >
                                  <View
                                    screenBackgroundColor="#FFFFFF"
                                    style={
                                      Object {
                                        "alignItems": "center",
                                        "backgroundColor": "#FFFFFF",
                                        "flexDirection": "row",
                                      }
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "backgroundColor": "rgb(249, 249, 251)",
                                          "borderBottomRightRadius": 16,
                                          "borderColor": "rgb(249, 249, 251)",
                                          "borderRightWidth": 1,
                                          "borderTopRightRadius": 16,
                                          "overflow": "hidden",
                                        }
                                      }
                                    >
                                      <View
                                        accessible={true}
                                        focusable={true}
                                        onClick={[Function]}
                                        onResponderGrant={[Function]}
                                        onResponderMove={[Function]}
                                        onResponderRelease={[Function]}
                                        onResponderTerminate={[Function]}
                                        onResponderTerminationRequest={[Function]}
                                        onStartShouldSetResponder={[Function]}
                                        style={
                                          Object {
                                            "opacity": 1,
                                          }
                                        }
                                      >
                                        <View
                                          borderRadius={28}
                                          iconPadding={12}
                                          style={
                                            Object {
                                              "opacity": 0,
                                              "padding": 12,
                                            }
                                          }
                                        >
                                          <RNSVGSvgView
                                            align="xMidYMid"
                                            bbHeight={16}
                                            bbWidth={16}
                                            color="rgba(39, 39, 46, 0.3)"
                                            fill="rgba(39, 39, 46, 0.3)"
                                            height={16}
                                            id="Raw"
                                            meetOrSlice={0}
                                            minX={0}
                                            minY={0}
                                            size={16}
                                            style={
                                              Array [
                                                Object {
                                                  "backgroundColor": "transparent",
                                                  "borderWidth": 0,
                                                },
                                                Object {},
                                                null,
                                                Object {
                                                  "flex": 0,
                                                  "height": 16,
                                                  "width": 16,
                                                },
                                              ]
                                            }
                                            tintColor="rgba(39, 39, 46, 0.3)"
                                            vbHeight={256}
                                            vbWidth={256}
                                            width={16}
                                          >
                                            <RNSVGGroup
                                              fill={
                                                Array [
                                                  0,
                                                  1294411566,
                                                ]
                                              }
                                              fillOpacity={1}
                                              fillRule={1}
                                              font={Object {}}
                                              matrix={
                                                Array [
                                                  1,
                                                  0,
                                                  0,
                                                  1,
                                                  0,
                                                  0,
                                                ]
                                              }
                                              opacity={1}
                                              originX={0}
                                              originY={0}
                                              propList={
                                                Array [
                                                  "fill",
                                                ]
                                              }
                                              rotation={0}
                                              scaleX={1}
                                              scaleY={1}
                                              skewX={0}
                                              skewY={0}
                                              stroke={null}
                                              strokeDasharray={null}
                                              strokeDashoffset={null}
                                              strokeLinecap={0}
                                              strokeLinejoin={0}
                                              strokeMiterlimit={4}
                                              strokeOpacity={1}
                                              strokeWidth={1}
                                              vectorEffect={0}
                                              x={0}
                                              y={0}
                                            >
                                              <RNSVGRect
                                                fill={null}
                                                fillOpacity={1}
                                                fillRule={1}
                                                height={256}
                                                matrix={
                                                  Array [
                                                    1,
                                                    0,
                                                    0,
                                                    1,
                                                    0,
                                                    0,
                                                  ]
                                                }
                                                opacity={1}
                                                originX={0}
                                                originY={0}
                                                propList={
                                                  Array [
                                                    "fill",
                                                  ]
                                                }
                                                rotation={0}
                                                rx={0}
                                                ry={0}
                                                scaleX={1}
                                                scaleY={1}
                                                skewX={0}
                                                skewY={0}
                                                stroke={null}
                                                strokeDasharray={null}
                                                strokeDashoffset={null}
                                                strokeLinecap={0}
                                                strokeLinejoin={0}
                                                strokeMiterlimit={4}
                                                strokeOpacity={1}
                                                strokeWidth={1}
                                                vectorEffect={0}
                                                width={256}
                                                x={0}
                                                y={0}
                                              />
                                              <RNSVGPath
                                                d="M128,24A104,104,0,1,0,232,128,104.12041,104.12041,0,0,0,128,24Zm37.65625,130.34375a7.99915,7.99915,0,1,1-11.3125,11.3125L128,139.3125l-26.34375,26.34375a7.99915,7.99915,0,0,1-11.3125-11.3125L116.6875,128,90.34375,101.65625a7.99915,7.99915,0,0,1,11.3125-11.3125L128,116.6875l26.34375-26.34375a7.99915,7.99915,0,0,1,11.3125,11.3125L139.3125,128Z"
                                                fill={
                                                  Array [
                                                    0,
                                                    4278190080,
                                                  ]
                                                }
                                                fillOpacity={1}
                                                fillRule={1}
                                                matrix={
                                                  Array [
                                                    1,
                                                    0,
                                                    0,
                                                    1,
                                                    0,
                                                    0,
                                                  ]
                                                }
                                                opacity={1}
                                                originX={0}
                                                originY={0}
                                                propList={Array []}
                                                rotation={0}
                                                scaleX={1}
                                                scaleY={1}
                                                skewX={0}
                                                skewY={0}
                                                stroke={null}
                                                strokeDasharray={null}
                                                strokeDashoffset={null}
                                                strokeLinecap={0}
                                                strokeLinejoin={0}
                                                strokeMiterlimit={4}
                                                strokeOpacity={1}
                                                strokeWidth={1}
                                                vectorEffect={0}
                                                x={0}
                                                y={0}
                                              />
                                            </RNSVGGroup>
                                          </RNSVGSvgView>
                                        </View>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                            <RCTScrollView
                              style={
                                Object {
                                  "height": "90%",
                                }
                              }
                            >
                              <View>
                                <View
                                  style={
                                    Object {
                                      "paddingVertical": 64,
                                    }
                                  }
                                />
                              </View>
                            </RCTScrollView>
                          </View>
                        </RCTSafeAreaView>
                      </View>
                    </Modal>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
